--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -34,7 +34,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Fricassée d'escargot</p>
                 <div class="text_2">
                   <p class="text_2_couper">Au piment d'espelette</p>
@@ -44,7 +44,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Foie gras de canard mi-cuit</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et ses copeaux de truffe noire</p>
@@ -54,7 +54,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Oeuf au plat</p>
                 <div class="text_2">
                   <p class="text_2_couper">Assaisonné à la truffe sur lit de caviar</p>
@@ -71,7 +71,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Filet de boeuf aux herbes</p>
                 <div class="text_2">
                   <p class="text_2_couper">Accompagné de sa ribambelle de légumes</p>
@@ -81,7 +81,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Parmentier de queue de boeuf</p>
                 <div class="text_2">
                   <p class="text_2_couper">À la truffe noire sur sa purée de panais</p>
@@ -91,7 +91,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box"> 
                 <p class="text_plat">Filet de turbot</p>
                 <div class="text_2">
                   <p class="text_2_couper">Aux agrumes</p>
@@ -108,7 +108,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Paris-Brest</p>
                 <div class="text_2">
                   <p class="text_2_couper">Revisité</p>
@@ -118,7 +118,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Macaron au chocolat d'exception</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et glace à la vanille de Madagascar</p>
@@ -128,7 +128,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Mousse au chocolat </p>
                 <div class="text_2">
                   <p class="text_2_couper">Au piment d'Espelette et à la truffe noire</p>
