--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -33,7 +33,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Ravioles de foie gras </p>
                 <div class="text_2">
                   <p class="text_2_couper">Accompagnés de leurs créme a la truffe</p>
@@ -43,7 +43,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Caviar osciétre</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur blini a la farine de blé noir</p>
@@ -53,7 +53,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Homard et espuma de potiron</p>
                 <div class="text_2">
                   <p class="text_2_couper">Mariné aux zestes d'orange</p>
@@ -63,7 +63,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_4 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Foie gras de canrd cuit entier</p>
                 <div class="text_2">
                   <p class="text_2_couper">Confiture de figue et pain toesté</p>
@@ -80,7 +80,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Noix de coquilles saint-jacques</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur lit de purée de céleri-rave</p>
@@ -90,7 +90,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Langoustine poêlée</p>
                 <div class="text_2">
                   <p class="text_2_couper">Purée de patate douce</p>
@@ -100,7 +100,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Mijoté de queue de boeuf </p>
                 <div class="text_2">
                   <p class="text_2_couper">Et riz sauvage aux zestes de citron</p>
@@ -117,7 +117,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Macaron noisette et chocolat</p>
                 <div class="text_2">
                   <p class="text_2_couper">Glace au caramel brun et sel de Guérande</p>
@@ -127,7 +127,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Baba au rhum revisité</p>
                 <div class="text_2">
                   <p class="text_2_couper">Avec son coulis de citron</p>
@@ -137,7 +137,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Tarte au citron meringuée </p>
                 <div class="text_2">
                   <p class="text_2_couper">Déstructurée</p>
