--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -34,7 +34,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Tartare de poulpe acidulé </p>
                 <div class="text_2">
                   <p class="text_2_couper">Aux zeste d'orange</p>
@@ -44,7 +44,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Velouté de légumes d'antan</p>
                 <div class="text_2">
                   <p class="text_2_couper">Carotte,panais,topimanbour</p>
@@ -54,7 +54,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Soupe a l'oignon</p>
                 <div class="text_2">
                   <p class="text_2_couper">revisitée</p>
@@ -71,7 +71,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Coquilles Saint-jascques</p>
                 <div class="text_2">
                   <p class="text_2_couper">Accompagnée d'une purée de panais</p>
@@ -81,7 +81,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Magret de canard</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et parmentier de pommes de terre</p>
@@ -91,7 +91,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Pigeonneau d'Ille-et-vilaine</p>
                 <div class="text_2">
                   <p class="text_2_couper">Sur son lit de gnocchis aux légumes</p>
@@ -108,7 +108,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Pétales de violettes glacés</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et purée de noisettes</p>
@@ -118,7 +118,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Fondant au chocolat</p>
                 <div class="text_2">
                   <p class="text_2_couper">Revisité</p>
@@ -128,7 +128,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Millefeuille croustillant</p>
                 <div class="text_2">
                   <p class="text_2_couper">Myrtilles et pate d'amande</p>
