--- a/menu/menu4.html
+++ b/menu/menu4.html
@@ -34,7 +34,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Tartare de thon</p>
                 <div class="text_2">
                   <p class="text_2_couper">Assaisonné au yuzu</p>
@@ -44,7 +44,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Bouchée de homard croustillant</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa farandole de petit légumes</p>
@@ -54,7 +54,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Velouté de cépes</p>
                 <div class="text_2">
                   <p class="text_2_couper">Aux truffes</p>
@@ -71,7 +71,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Poulet  roti aux herbes de provence</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa créme de truffe</p>
@@ -81,7 +81,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Langouste rotie</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et ses légumes de saison</p>
@@ -91,7 +91,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Cote de boeuf Angus</p>
                 <div class="text_2">
                   <p class="text_2_couper">Et sa purée de panais</p>
@@ -108,7 +108,7 @@
         <nav class="navbar">
           <ul>
             <li class="anim clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Farandole de desserts</p>
                 <div class="text_2">
                   <p class="text_2_couper">Du chef</p>
@@ -118,7 +118,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_2 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Créme brulée</p>
                 <div class="text_2">
                   <p class="text_2_couper">Revisité</p>
@@ -128,7 +128,7 @@
               <span class="valide"><i class="fas fa-check-circle valide_ok"></i></span>
             </li>
             <li class="anim_3 clic">
-              <div>
+              <div class="box">
                 <p class="text_plat">Tiramisu</p>
                 <div class="text_2">
                   <p class="text_2_couper">A la noisette</p>
