--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
                 <span class="nouveau1">Nouveau</span>
-              </figcaption>>
+              </figcaption>
             </figure>
           </a>
         </div>
@@ -101,7 +101,7 @@
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
                 <span class="nouveau2">Nouveau</span>
-              </figcaption>>
+              </figcaption>
             </figure>
           </a>
         </div>
@@ -119,7 +119,7 @@
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
                 <span class="nouveau1">Nouveau</span>
-              </figcaption>>
+              </figcaption>
             </figure>
           </a>
         </div>
@@ -137,7 +137,7 @@
                 <i class="far fa-heart"></i>
                 <i class="fas fa-heart"></i>
                 <span class="nouveau1">Nouveau</span>
-              </figcaption>>
+              </figcaption>
             </figure>
           </a>
         </div>
