--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -16,9 +16,9 @@
   <header>
     <div class="banner">
       <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
-      <img src="/public/images/logo/ohmyfood.png" alt="logo" class="logo">
+      <img src="/images/logo/ohmyfood.png" alt="logo" class="logo">
     </div>
-    <img src="/public/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette" class="img_menu" />
+    <img src="/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette" class="img_menu" />
   </header>
   
   <main>
