--- a/menu/menu3.html
+++ b/menu/menu3.html
@@ -15,9 +15,9 @@
     <header>
       <div class="banner">
         <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
-        <img src="/public/images/logo/ohmyfood.png" alt="logo" class="logo">
+        <img src="./images/logo/ohmyfood.png" alt="logo" class="logo">
       </div>
-      <img src="/public/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette" class="img_menu" />
+      <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="la palette" class="img_menu" />
     </header>
 
     
