--- a/menu/menu1.html
+++ b/menu/menu1.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <div class="banner">
-      <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
+      <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
       <img src="./images/logo/ohmyfood.png" alt="logo" class="logo">
     </div>
     <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="la palette" class="img_menu" />
