--- a/menu/menu2.html
+++ b/menu/menu2.html
@@ -15,9 +15,9 @@
     <header>
       <div class="banner">
         <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
-        <img src="/public/images/logo/ohmyfood.png" alt="logo" class="logo">
+        <img src="./images/logo/ohmyfood.png" alt="logo" class="logo">
       </div>
-      <img src="/public/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la palette" class="img_menu note" />
+      <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="la palette" class="img_menu note" />
     </header>
 
     <main>
@@ -66,7 +66,7 @@
               <div class="box">
                 <p class="text_plat">Foie gras de canrd cuit entier</p>
                 <div class="text_2">
-                  <p class="text_2_couper">Confiture de figue et pain toesté</p>
+                  <p class="text_2_couper">Confiture de figue et pain toasté</p>
                   <p class="text_plat_prix">35€</p>
                 </div>
               </div>
