--- a/menu/menu4.html
+++ b/menu/menu4.html
@@ -14,7 +14,7 @@
   
     <header>
       <div class="banner">
-        <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
+        <a href="../index.html"><i class="fas fa-arrow-left"></i></a>
         <img src="./images/logo/ohmyfood.png" alt="logo" class="logo">
       </div>
       <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="la palette" class="img_menu" />
